fix margin and padding but on ios devices

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,9 +2,9 @@
   border-bottom: solid 4px #39afe0;
   background-color: #a9bbc8;
 }
-.navbar-item, .navbar-link {
+/* .navbar-item, .navbar-link {
   padding: 0.5rem 1.75rem;
 }
 .navbar-burger { 
   margin-right: 1rem;
-}
+} */
